--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -39,24 +39,24 @@ jobs:
           gh api \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/dkuegler/workflow-test/collaborators/sRassmann
+            /repos/${{ github.repository }}/collaborators/sRassmann
           echo "dkuegler:"
           gh api \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/Deep-MI/FastSurfer/collaborators/dkuegler
+            /repos/${{ github.repository }}/collaborators/dkuegler
           echo "m-reuter:"
           gh api \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/Deep-MI/FastSurfer/collaborators/m-reuter
+            /repos/${{ github.repository }}/collaborators/m-reuter
           echo "emadRad:"
           gh api \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/Deep-MI/FastSurfer/collaborators/emadRad
+            /repos/${{ github.repository }}/collaborators/emadRad
           echo "missing:"
           gh api \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/dkuegler/workflow-test/collaborators/oidjgusghishltiu
+            /repos/${{ github.repository }}/collaborators/oidjgusghishltiu
