--- a/.github/workflows/abc.yaml
+++ b/.github/workflows/abc.yaml
@@ -13,5 +13,5 @@ jobs:
     steps:
       - shell: bash
         run: |
-          echo "${{ github }}"
-          echo "${{ job }}"
+          echo "${{ toJSON(github) }}"
+          echo "${{ toJSON(job) }}"
